# sasktran

./: .buildinfo  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CMakeSettings.json  README.md  aband_emission.html  advanced.html  api_reference.html  atmosphere.html  brdf.html  changelog.html  climatology.html  config.html  constructing_atmosphere.html  constructing_geometry.html  constructing_geometry.ipynb  emission.html  engine.html  examples.html  experimental.html  genindex.html  geodetic.html  geometry.html  index.html  installing.html  license.md  lines_of_sight.html  objects.inv  optical_property.html  other_engines.html  quickstart.html  sasktran-coreConfig.cmake  sasktran_hr.html  search.html  searchindex.js  solar_spectrum.html  species.html  stokes_vector.html  (+3 more)
Repos_BaseCode/nxhdf/: CMakeLists.txt  license.md
Repos_BaseCode/nxhdf/nxnetcdfio/: netcdfio.cpp  nxnetcdfio.h
Repos_skopticalproperties/: CMakeLists.txt  skopticalproperties21.h
Repos_skopticalproperties/sources/: skconvolvedopticalpropentry.cxx  skconvolvedopticalproperties.h  sknonsphericalparticle.h  sknonsphericalparticletmatrixoriented.cxx  skopticalpropertylistentry.h  skphasematrix.cxx  skphasematrix.h  skrtalbedo.cxx  skrtextinction_multipleoverlappingspectra.cxx  skrtextinction_tabulatedphasematrix.cxx  skrtextinctionmarthybridprofile.h  skrthenyeygreenstein.cxx  skrtscatter_phasematrix.h  skrtscattericecrystal.cxx  skrtscattericecrystalcached.cxx  skrtscatteringcrosssectionbase.cxx  skrtscatterrayleighdryair.cxx  skrtscatterrayleighdryairinelastic.cpp  skrtsimplerayleigh.cpp  skstokesmatrix.cxx  sktran_atmopshericstate.cxx  skuserscatterconstantheight.cpp  skuserscatterconstantheight.h
Repos_skopticalproperties/sources/baum_bulk_icecloudmodel/: baumicecrystals_database2014.cxx  baumicecrystals_database2014.h  skopticalproperties_baumicecrystals2014.cxx  skrtscatter_tabulatedcirrusproperties.h
Repos_skopticalproperties/sources/brdf/: sktran_albedo.h  sktran_brdf_combination.cpp  sktran_brdf_cox_munk.cpp  sktran_brdf_hapke.cpp  sktran_brdf_lambertian.cpp  sktran_brdf_modis.cpp  sktran_brdf_rahman.cpp  sktran_brdf_ross.cpp  sktran_brdf_spectralvarying.cpp
Repos_skopticalproperties/sources/emissions/: skemission.cpp  skemission.h  skemission_hitranchemical.cpp  skemissiontabulatedheightwavelength.h  skemissionthermal.cpp  sktranatmosphericemission.cxx  spectralemission_collection.cpp
Repos_skopticalproperties/sources/no2/: no2xsections.h  skno2xsection.cxx  skno2xsection_osiris.cxx
Repos_skopticalproperties/sources/o2-o2/: o4_cross_sections.h
Repos_skopticalproperties/sources/o3/: sko3xsection.cxx  sko3xsection_basspaur.cxx  sko3xsection_daumont_brion_malicet.cxx  sko3xsection_ftsvoigt.cxx  sko3xsection_sciabogumilv4.cxx
Repos_skopticalproperties/sources/sasktranif_opticalimpl/: iskbrdf_stub_base.cpp
Repos_skopticalproperties/sources/skspectralline/: skspectrallinecollection_molecule.cxx  skspectrallineshape_voigttabulated.h  voigthumlicek_kuntz.cxx  voigttabulated.cxx
Repos_skopticalproperties/sources/so2/: SO2_Bogumil(2003)_203K_239-395nm.txt  SO2_Bogumil(2003)_223K_239-395nm.txt  SO2_Bogumil(2003)_243K_239-395nm.txt  SO2_Bogumil(2003)_273K_239-395nm.txt  SO2_Bogumil(2003)_293K_239-395nm.txt  SO2_Freeman(1984)_213K_172.414-175.438nm.txt  SO2_Freeman(1984)_213K_178.572-181.817nm.txt  SO2_Freeman(1984)_213K_181.818-185.185nm.txt  SO2_Freeman(1984)_213K_188.679-192.307nm.txt  SO2_Freeman(1984)_213K_192.307-196.078nm.txt  SO2_Freeman(1984)_213K_200.000-204.082nm.txt  SO2_Freeman(1984)_213K_204.082-208.333nm.txt  SO2_Freeman(1984)_213K_208.333-212.766nm.txt  SO2_Freeman(1984)_213K_217.391-222.222nm.txt  SO2_Freeman(1984)_213K_227.272-232.558nm.txt  SO2_Freeman(1984)_213K_232.558-238.095nm.txt  SO2_Freeman(1984)_213K_238.095-239.860nm.txt  SO2_VandaeleHermansFally(2009)_298K_227.275-416.658nm.txt  SO2_VandaeleHermansFally(2009)_338K_227.275-416.658nm.txt  SO2_VandaeleHermansFally(2009)_358K_227.275-416.658nm.txt  so2_bogumil_2003_xsection.h  so2_rufus_2003_xsection.h  so2_vandaele_2009_xsection.h  so2xsections.h  vandaele_so2_2009.cpp
pysasktran/: .gitattributes  .gitignore  MANIFEST.in  dummy_install.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
pysasktran/ci/: config.yml  py310.yml  py311.yml  py312.yml  py313.yml  py36.yml  py37.yml  py38.yml  py39.yml
pysasktran/docs/: environment.yml  requirements.txt
pysasktran/docs/performance_report/: Makefile  make.bat
pysasktran/docs/source/: aband_emission.rst  changelog.rst  conf.py  constructing_atmosphere.rst  engine.rst  examples.rst  index.rst  installing.rst  notebook.tex  other_engines.rst
pysasktran/sasktran/: __init__.py  _version.py  atmosphere.py  brdf.py  climatology.py  config.ini  conftest.py  emission.py  emission_hitranphotochemical.py  engine.py  engine_occ.py  engine_so.py  exceptions.py  geodetic.py  geometry.py  handles.py  lineofsight.py  opticalproperty.py  solarspectrum.py  species.py  stokesvector.py  test_climatology.py  test_emissions.py  test_hitran.py  test_hr.py  test_hr_wf.py  test_mc.py  test_mie.py  test_occ.py  test_opticalproperty.py  test_so.py  test_species.py  util.py
pysasktran/sasktran/aband/: load_data.py  model.py  util.py
pysasktran/sasktran/co/: engine.py
pysasktran/sasktran/config/: __init__.py  libomp_patch.py  update_settings.py
pysasktran/sasktran/databases/: baum.py
pysasktran/sasktran/disco/: engine.py  interface.py
pysasktran/sasktran/dist_utils/: __init__.py  libomp_patch.py
pysasktran/sasktran/legendre/: __init__.py  wigner.py
pysasktran/sasktran/mie/: __init__.py  distribution.py  refractive.py
pysasktran/sasktran/tir/: climatology.py  constants.py  engine.py  opticalproperty.py  test_climatology.py  test_opticalproperty.py  util.py
pysasktran2/: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
pysasktran2/conda-recipe/: meta.yaml  osx_arm64_.yaml
src/core/: CMakeLists.txt
src/core/base/: CMakeLists.txt
src/core/fortran_libraries/: CMakeLists.txt
src/core/sasktran/: sasktran.h  (+7 more)
src/sasktran2/: CMakeLists.txt
(+1505 files in other folders)
